--- a/Netflix .ipynb
+++ b/Netflix .ipynb
@@ -11,13 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is an opportunity on Netflix account to get the file which reflects all your viewing activity there. \n",
-    "I ordered such file and Netflix sent it to me on the next day.\n"
+    "There is an opportunity on a Netflix account to get the file that reflects all your viewing activity there. I ordered such a file and Netflix sent it to me the next day.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +245,7 @@
        "9  Chrome PC (Cadmium)  0:00:33         0:00:33  US (United States)  "
       ]
      },
-     "execution_count": 368,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +265,7 @@
        "(3733, 10)"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,12 +281,12 @@
     "There are 3733 rows and 10 columns in the file. It reflects that I came to the USA in 2018 \n",
     "and got my own Netflix subscription in October 2018. I am their customer since then.\n",
     "\n",
-    "From the end of April to the 17th of September 2019 I was back to Russia. \n"
+    "From the end of April to the 17th of September 2019, I was back in Russia. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +297,7 @@
        "Name: Country, dtype: int64"
       ]
      },
-     "execution_count": 370,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,8 +310,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It means that although  the ratio of time I was in Russia to be in  US is 5 : 22 ( 22,7 % of all the time) \n",
-    "the  29,4 % of all entries to the file were made when I was in Russia.\n",
+    "It means that although  the ratio of time I was in Russia to be in the US is 5 : 22 ( 22,7 % of all the time) \n",
+    "29,4 % of all entries to the file were made when I was in Russia.\n",
     "\n",
     "It makes sense so as I was on vacation and watched Netflix more than usual.\n"
    ]
@@ -326,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +354,7 @@
        "Name: Country, dtype: int64"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +384,7 @@
        "Name: Attributes, dtype: int64"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +529,7 @@
        "4  0:00:07         0:00:07     US   "
       ]
      },
-     "execution_count": 375,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +564,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,12 +586,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We transfere corresponding columns into DateTime and TimeDelta types:"
+    "We transfer corresponding columns into DateTime and TimeDelta types:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +625,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +652,7 @@
        "Timedelta('0 days 00:18:44')"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,12 +665,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The total time which I have spent for watching Netflix looks formidable:"
+    "The total time which I have spent watching Netflix looks formidable:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +679,7 @@
        "Timedelta('46 days 23:41:13')"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,13 +693,13 @@
    "metadata": {},
    "source": [
     "Taking into account that 8 hours a day usually is for sleep, \n",
-    "let us calculate how much ACTIVE day time I spent watching movies. \n",
+    "let us calculate how much ACTIVE daytime I spent watching movies. \n",
     "We will increase the total time in 1/3, so as 8 hours are 1/3 out of 24:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +708,7 @@
        "Timedelta('62 days 15:34:57.333333')"
       ]
      },
-     "execution_count": 383,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,12 +723,12 @@
    "source": [
     "Let us look at Video_Type column. \n",
     "If the row in the file is about film or serial, the Video_Type column is empty (Nan). If there is an entry at Video_Type column, it means \n",
-    "it was a preview, trailer etc., something from advertisement.\n"
+    "it was a preview, trailer, etc., something from an advertisement.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +746,7 @@
        "Name: Duration, dtype: timedelta64[ns]"
       ]
      },
-     "execution_count": 384,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,12 +759,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is approximately 6 hours were spent watching advertisement of movies.  "
+    "It is approximately 6 hours were spent watching advertisement for movies.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +781,7 @@
        "Name: Video_Type, dtype: int64"
       ]
      },
-     "execution_count": 385,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,12 +794,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let is erase all pertenint to advertisement. The entries into 'Video_Type' should be "
+    "Let is erase all pertinent to an advertisement. The entries into 'Video_Type' should be "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +841,7 @@
        "(2761, 7)"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1072,7 @@
        "[2761 rows x 8 columns]"
       ]
      },
-     "execution_count": 390,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1131,15 +1130,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can see that the name of the movie itself is in the beginning of the entry. \n",
-    "Then, after colon sign the number of season or episode comes.\n",
-    "Let is left the names of the films only and get rid of everything written after first ':' sign. \n",
+    "You can see that the name of the movie itself is at the beginning of the entry. \n",
+    "Then, after the colon sign, the number of seasons or episodes comes.\n",
+    "Let is left the names of the films only and get rid of everything written after the first ':' sign. \n",
     "Let write a function for this purpose:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1191,7 @@
        "Name: Title, Length: 2761, dtype: object"
       ]
      },
-     "execution_count": 395,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,12 +1204,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can find out how much time in total was spent for watching each single serial:"
+    "Now we can find out how much time in total was spent watching every single serial:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1239,7 @@
        "Name: Duration, dtype: timedelta64[ns]"
       ]
      },
-     "execution_count": 396,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Yes, my favorite serials which I used to binge watch are at the top of the list."
+    "Yes, my favorite serials which I used to binge-watch are at the top of the list."
    ]
   },
   {
@@ -1267,12 +1266,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To estimate how long I watched Netflix each month, let us to create a new column with info on month and year only."
+    "To estimate how long I watched Netflix each month, let us create a new column with info on month and year only."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1388,7 @@
        "4         0:00:07     US        2020-12  "
       ]
      },
-     "execution_count": 397,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1445,7 @@
        "Freq: M, Name: Duration, dtype: timedelta64[ns]"
       ]
      },
-     "execution_count": 398,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,12 +1458,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To plot a graph let us transfer the time span into hours."
+    "To plot a graph, let us transfer the time span into hours."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1547,7 @@
        " 18.0]"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1571,12 +1570,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Avarage number of hours of watching Netflix per month:"
+    "The average number of hours of watching Netflix per month:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1584,7 @@
        "42.0"
       ]
      },
-     "execution_count": 402,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1598,12 +1597,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It means that dayly I wantch TV about 1.4 hours or 1 hour 24 min"
+    "It means that daily I watch TV for about 1.4 hours or 1 hour 24 min"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1611,7 @@
        "24.0"
       ]
      },
-     "execution_count": 403,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1638,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1685,10 +1684,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    The looking into the Netflix data reveals that I used to watch Netflix too mach. \n",
-    "    During 2 years and 3 months I spent 2 months of active time watching Netflix. So, in average it is 1h and 20 min a day.  When I am on vacation, I used to spend more time watching movies as usual. The list of my favorite serials is at the top for time taken for watching them. \n",
-    "    In my defense I would say that I was a newcomer to United States and watching films helped me for improving my accent. Moreover, watching old movies helps to be acquainted with American culture in general, so I cannot consider this time wasted in vain. However, I should definitely reduce the time for Netflix and in future do more coding for leisure activity instead. \n",
-    "\n"
+    "Looking into the Netflix data reveals that I used to watch Netflix too much. \n",
+    "    \n",
+    "During 2 years and 3 months, I spent 2 months of active time watching Netflix. So, on average it is 1h and 20 min a day.  When I am on vacation, I used to spend more time watching movies as usual. \n",
+    "\n",
+    "My favorite serials turn to be the most time-consuming for me. \n",
+    "\n",
+    "In my defense, I would say that I was a newcomer to the United States and watching films helped me for improving my accent. Moreover, watching old movies helps to be acquainted with American culture in general, so I cannot consider this time wasted in vain. However, I should definitely reduce the time for Netflix and in the future do more coding for leisure activity instead. \n"
    ]
   },
   {
